# LightYears

./: .gitignore  CMakeLists.txt  README.md
LightYears/src/: main.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/VFX/: Particle.h
LightYearsEngine/include/engineConfigs/: EngineStructs.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  AudioManager.h  BackGroundActor.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PerfMonitor.h  PhysicsSystem.h  ShaderManager.h  SoundComponent.h  TimerManager.h  World.h
LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYearsEngine/include/widget/: Button.h  HUD.h  ImageWidget.h  TextWidget.h  ValueGauge.h  Widget.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  AudioManager.cpp  BackGroundActor.cpp  BackgroundLayer.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  ShaderManager.cpp  SoundComponent.cpp  TimerManager.cpp  World.cpp
LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYearsEngine/src/widget/: Button.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  ValueGauge.cpp  Widget.cpp
LightYearsGame/: CMakeLists.txt  Config.h.in
LightYearsGame/assets/SpaceShooterRedux/Shaders/: glow.frag  point_light.frag  simple_color.frag
LightYearsGame/include/: Config.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/enemy/: ChaosStage.h  EnemySpaceShip.h  Hexagon.h  HexagonStage.h  InfiniteStage.h  LevelOneBoss.h  LevelOneBossStage.h  TwinBlade.h  TwinBladeStage.h  UFO.H  UFOStage.h  Vanguard.h  VanguardStage.h
LightYearsGame/include/environment/: Asteroid.h  AsteroidSpawner.h
LightYearsGame/include/gameConfigs/: GameplayConfig.h  GameplayStructs.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/include/gameplay/: HealthComponent.h
LightYearsGame/include/level/: GameLevel.h  LevelOne.h  MainMenuLevel.h
LightYearsGame/include/player/: Player.h  PlayerManager.h  PlayerSpaceShip.h  Reward.h
LightYearsGame/include/spaceShip/: SpaceShip.h
LightYearsGame/include/weapon/: Bullet.h  BulletShooter.h  FrontalWiper.h  Shooter.h  ThreeWayShooter.h
LightYearsGame/include/weapon/bulletShooter/: MultiShooter.h  ShooterPresets.h
LightYearsGame/include/widget/: GameHUD.h  GameOverHUD.h  MainMenuHUD.h  PauseMenuHUD.h
LightYearsGame/src/VFX/: Explosion.cpp
LightYearsGame/src/enemy/: ChaosStage.cpp  EnemySpaceShip.cpp  Hexagon.cpp  HexagonStage.cpp  InfiniteStage.cpp  LevelOneBoss.cpp  LevelOneBossStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
LightYearsGame/src/environment/: Asteroid.cpp  AsteroidSpawner.cpp
LightYearsGame/src/gameFramework/: GameApplication.cpp
LightYearsGame/src/gameplay/: HealthComponent.cpp
LightYearsGame/src/level/: GameLevel.cpp  LevelOne.cpp  MainMenuLevel.cpp
LightYearsGame/src/player/: Player.cpp  PlayerManager.cpp  PlayerSpaceShip.cpp  Reward.cpp
LightYearsGame/src/spaceShip/: SpaceShip.cpp
LightYearsGame/src/weapon/: Bullet.cpp  BulletShooter.cpp  FrontalWiper.cpp  Shooter.cpp  ThreeWayShooter.cpp
LightYearsGame/src/weapon/bulletShooter/: MultiShooter.cpp
LightYearsGame/src/widget/: GameHUD.cpp  GameOverHUD.cpp  MainMenuHUD.cpp  PauseMenuHUD.cpp
